[gd_scene load_steps=4 format=3 uid="uid://byrh4hbjoboyo"]

[ext_resource type="Texture2D" uid="uid://6r6bt0v34fs2" path="res://Art/Car.png" id="1_lpgtf"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="2_u7q0n"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n6yn4"]
radius = 5.0
height = 58.0

[node name="RigidBody2D" type="RigidBody2D"]
collision_mask = 2
mass = 0.3
gravity_scale = 0.5
angular_damp = 3.009
script = ExtResource("2_u7q0n")

[node name="Player" type="Sprite2D" parent="."]
texture = ExtResource("1_lpgtf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 7)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_n6yn4")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="RaySteer" type="RayCast2D" parent="."]
position = Vector2(-9, 7)
target_position = Vector2(50, 0)
collision_mask = 2

[node name="FrontRay" type="RayCast2D" parent="."]
position = Vector2(27, 7)
target_position = Vector2(0, 10)
collision_mask = 2

[node name="BackRay" type="RayCast2D" parent="."]
position = Vector2(-22, 8)
target_position = Vector2(0, 10)
collision_mask = 2

[node name="BackWheel" type="Node2D" parent="."]
position = Vector2(-22, 10)

[node name="FrontWheel" type="Node2D" parent="."]
position = Vector2(29, 10)
